# prototype

./: .replit  README.md  main.py  pyproject.toml  requirements.txt
static/: app.js  index.html
