[tool.poetry]
name = "my-pronunciation-app"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
Flask = "^2.0.0" # 최신 버전으로 변경될 수 있습니다.
google-cloud-speech = "^2.0.0" # 최신 버전으로 변경될 수 있습니다.
google-generativeai = "^0.4.0" # 최신 버전으로 변경될 수 있습니다.
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Replit 실행 명령 (아래 줄을 추가하거나 확인)
[tool.replit]
entrypoint = "main.py"